--- a/COVID_Fontend_files/front-end/legal.html
+++ b/COVID_Fontend_files/front-end/legal.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <title>COVID-19</title>
 
-    <meta name="description" content= "The purpose of this covid 19 dashboard
-    is to help the NC community to stay update with latest numbers and news
-   ">
+    <meta name="description" content= "The purpose of this covid 19 dashboard is to help the NC community to stay update with
+    latest numbers and news">
 </head>
 <body>
+  <a href="#main" class="skip-nav">Skip Navigation</a>
 
 <div class="toplogo">
 <img src="../Img/logo.png" alt="website logo" class="logo">
@@ -29,14 +29,14 @@
 
 
  <ul class="main-menu">
-    <li><a href="../">Home</a></li>
-    <li><a href="../CDC.html">CDC</a></li>
-    <li><a href="../LocalNews.html">Local News</a></li>
-    <li><a href="../donate">Donate Now!!</a></li>
+    <li><a href="./Index.html">Home</a></li>
+    <li><a href="./CDC.html">CDC</a></li>
+    <li><a href="./LocalNews.html">Local News</a></li>
+    <li><a href="./donate.html">Donate Now!!</a></li>
  </ul>
 
 
-</ul>
+
 </nav>
 <!--place holder-->
 <div class="container">
@@ -74,8 +74,9 @@
           <h3>Chart</h3>
           <p>
                <canvas id="myChart" width="100" height="100"></canvas>
+
            </p>
-     
+
 
         </div>
 
@@ -86,25 +87,22 @@
 </div>
 
 
+        <footer class="foot">
+          <a href="./legal.html">Legal</a>
+          <a href="./Accessibility.html">Accessibility</a>
+	<div class="copyright">
+    <p>Copyright 2020, North Carolina Covid-19 Dashboard </p>
 
+    </div>
 
-
-<a href="#main" class="skip-nav">Skip Navigation</a>
-
-
-
-
-
-
-
-
-
-        <footer>
-           <p>All rights reserved &copy; Team 8</p>
         </footer>
+
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
 
 
 </body>
 </html>
+
+
