--- a/COVID_Fontend_files/front-end/Index.html
+++ b/COVID_Fontend_files/front-end/Index.html
@@ -24,31 +24,31 @@
   <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
-<form name="Tick">
-      <input type="text" size="11" name="Clock">
-      </form>
-      <script>
-      function show(){
-      var Digital=new Date()
-      var hours=Digital.getHours()
-      var minutes=Digital.getMinutes()
-      var seconds=Digital.getSeconds()
-      var dn="AM"
-      if (hours>12){
-      dn="PM"
-      hours=hours-12
+<div id="clock"></div>
+    <script>function currentTime() {
+      var date = new Date(); /* creating object of Date class */
+      var hour = date.getHours();
+      var min = date.getMinutes();
+      var sec = date.getSeconds();
+      var midday = "AM";
+      midday = (hour >= 12) ? "PM" : "AM"; /* assigning AM/PM */
+      hour = (hour == 0) ? 12 : ((hour > 12) ? (hour - 12): hour); /* assigning hour in 12-hour format */
+      hour = updateTime(hour);
+      min = updateTime(min);
+      sec = updateTime(sec);
+      document.getElementById("clock").innerText = hour + " : " + min + " : " + sec + " " + midday; /* adding time to the div */
+        var t = setTimeout(currentTime, 1000); /* setting timer */
+    }
+
+    function updateTime(k) { /* appending 0 before time elements if less than 10 */
+      if (k < 10) {
+        return "0" + k;
       }
-      if (hours==0)
-      hours=12
-      if (minutes<=9)
-      minutes="0"+minutes
-      if (seconds<=9)
-      seconds="0"+seconds
-      document.Tick.Clock.value=hours+":"+minutes+":"
-      +seconds+" "+dn
-      setTimeout("show()",1000)
+      else {
+        return k;
       }
-      show()
+    }
+    currentTime();
 </script>
 
 </div>
