--- a/COVID_Fontend_files/front-end/Index.html
+++ b/COVID_Fontend_files/front-end/Index.html
@@ -16,7 +16,7 @@
 <body onload="setMode()">
   <a href="#main" class="skip-nav">Skip Navigation</a>
   <div class="toplogo" id="topHeader">
-    <img src="../Img/logo.png" alt="website logo" class="logo">
+    <img src="../Img/logo1.png" alt="website logo" class="logo">
     <form class="Zip" action="/action_page.php" style="margin:auto;max-width:300px">
       <input type="text" placeholder="Search by Zipcode" name="search2">
       <button type="submit"><i class="fa fa-search"></i></button>
