--- a/COVID_Fontend_files/front-end/donate.html
+++ b/COVID_Fontend_files/front-end/donate.html
@@ -30,52 +30,54 @@
   </nav>
   <!--place holder-->
   <div class="container">
-    <main >
+    <main>
       <h1>Donate now and help us fight the virus </h1>
       <img src="../Img/Final_Donate.jpg" alt="">
 
     </main>
     <div class="donate">
       <div id="content1">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
+        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i
+            class="fas fa-chevron-right"></i></a>
         <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
           to ensure patients get the care they need and frontline workers get essential supplies and information;and to
           accelerate research and development of a vaccine and treatments for all who need them.
         </p>
       </div>
       <div id="content2">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
-        <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
-          to ensure patients get the care they need and frontline workers get essential supplies and information;and to
-          accelerate research and development of a vaccine and treatments for all who need them.
+        <a href="https://app.mobilecause.com/vf/HELPCharMeck" class="btn1"> The COVID-19 Response Fund<i
+            class="fas fa-chevron-right"></i></a>
+        <p>In partnership with Mecklenburg County, the City of Charlotte, corporations, houses of faith and others, the COVID-19
+        Response Fund helps those most in need through support to nonprofit organizations.
         </p>
       </div>
       <div id="content3">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
-        <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
-          to ensure patients get the care they need and frontline workers get essential supplies and information;and to
-          accelerate research and development of a vaccine and treatments for all who need them.
+        <a href="https://relief.nfl.com/" class="btn1">NFL PARTNERS' RELIEF EFFORTS<i
+            class="fas fa-chevron-right"></i></a>
+        <p> The NFL continues to work closely with our partners to support those in need.
+          Donate today and help provide relief to those impacted most by the COVID-19 pandemic, from those suffering to
+          the workers on the front lines. Every donation is helpful, small or large.
         </p>
       </div>
       <div id="content4">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
-        <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
-          to ensure patients get the care they need and frontline workers get essential supplies and information;and to
-          accelerate research and development of a vaccine and treatments for all who need them.
+        <a href="https://www.wunc.org/post/how-you-can-help-nc-community-during-coronavirus" class="btn1">The Animal Protection Society of Durham <i
+            class="fas fa-chevron-right"></i></a>
+        <p> The Animal Protection Society of Durham is accepting donations of pet food to assist pet owners facing financial
+        hardship due to COVID-19.
         </p>
       </div>
       <div id="content5">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
-        <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
-          to ensure patients get the care they need and frontline workers get essential supplies and information;and to
-          accelerate research and development of a vaccine and treatments for all who need them.
+        <a href="https://elcentronc.networkforgood.com/projects/95669-covid-19-relief" class="btn1">El Centro Hispano<i
+            class="fas fa-chevron-right"></i></a>
+        <p>Donations are welcomed to El Centro Hispano's COVID-19 Crisis Response Fund to support community members who have been
+        impacted due to the Covid-19 outbreak.
         </p>
       </div>
       <div id="content6">
-        <a href="https://covid19responsefund.org/en/" class="btn1">COVID-19 Solidarity Response Fund for WHO<i class="fas fa-chevron-right"></i></a>
-        <p> Donations support WHO’s work, including with partners, to track and understand the spread of the virus;
-          to ensure patients get the care they need and frontline workers get essential supplies and information;and to
-          accelerate research and development of a vaccine and treatments for all who need them.
+        <a href="https://covid19responsefund.org/en/" class="btn1">Feeding America<i
+            class="fas fa-chevron-right"></i></a>
+        <p> Feeding America operates a network of 200 food banks and 60,000 food pantries across the U.S., and is accepting
+        donations to its COVID-19 Response Fund.
         </p>
       </div>
     </div>
