--- a/COVID_Fontend_files/front-end/Index.html
+++ b/COVID_Fontend_files/front-end/Index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-    <script type="text/javascript" src="../front-end/covi19.js"></script>
   <title>COVID-19 - Home</title>
   <meta name="description" content= "The purpose of this Covid-19 dashboard is to help  NC
     community to stay up to date with latest numbers and news">
@@ -27,7 +26,7 @@
   <nav class = "main-nav">
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
-      <li><a href="./CDC.html">CDC</a></li>
+      <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
       <li><a href="./news.html">Local News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
@@ -55,7 +54,7 @@
         <img src="../Img/NEWS.jpg" alt="" />
         <h3 id="covidText">Local News</h3>
         <p id="covidText">
-          <div id="website_div"></div>
+          Some text
         </p>
       </div>
       <div>
