Changed donate.html file

--- a/COVID_Fontend_files/front-end/donate.html
+++ b/COVID_Fontend_files/front-end/donate.html
@@ -17,30 +17,41 @@
   <a href="#main" class="skip-nav">Skip Navigation</a>
   <div class="toplogo" id="topHeader">
     <img src="../Img/logo.png" alt="website logo" class="logo">
-    <form class="Zip" action="/action_page.php" style="margin:auto;max-width:300px">
+
+   <!-- <form class="Zip" action="/action_page.php" style="margin:auto;max-width:300px">
       <input type="text" placeholder="Search by Zipcode" name="search2">
       <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
+    </form> -->
+
   </div>
 
   <nav class = "main-nav">
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
-      <li><a href="./CDC.html">CDC</a></li>
-      <li><a href="./news.html">Local News</a></li>
+      <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
+      <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
   </nav>
+
   <!--place holder-->
   <div class="container">
     <header class="donatebackground">
-      <a href="#" class="btn">DONATE NOW<i class="donatebtn"></i></a>
+      <p class="donatenow">
+        DONATE NOW
+      </p>
+      <p class="savelives">
+        SAVE LIVES
+      </p>
+      <!-- <a href="#" class="btn">DONATE NOW<i class="donatebtn"></i></a> -->
     </header>
 
     <!--Place holder-->
     <section class="donateOption" id="covidInfoTab">
       <div>
-        <img src="../Img/who.png" alt="">
+        <a href="https://covid19responsefund.org/en/" target="_blank">
+          <img src="../Img/who.png" alt="">
+        </a>
         <!--<h3 id="covidText"> World Health Organization</h3>-->
         <a href="https://covid19responsefund.org/en/" target="_blank">
           <h3>
@@ -57,7 +68,9 @@
       </div>
 
       <div>
-        <img src="../Img/American Red Cross.jpeg" alt="" />
+        <a href="https://www.redcrossblood.org/give.html/find-drive" target="_blank">
+          <img src="../Img/American Red Cross.jpeg" alt="" />
+        </a>
         <!-- <h3 id="covidText">American Red Cross</h3> -->
         <a href="https://www.redcrossblood.org/give.html/find-drive" target="_blank">
           <h3>
@@ -73,7 +86,9 @@
       </div>
 
       <div>
-        <img src="../Img/salvationarmy.jpg" alt="" />
+        <a href="https://give.salvationarmyusa.org/give/276832/#!/donation/checkout" target="_blank">
+          <img src="../Img/salvationarmy.jpg" alt="" />
+        </a>
         <!-- <h3 id="covidText">The Salvation Army</h3> -->
         <a href="https://give.salvationarmyusa.org/give/276832/#!/donation/checkout" target="_blank">
           <h3>
@@ -88,7 +103,15 @@
       </div>
 
       <div>
+        <a href="https://secure.feedingamerica.org/site/Donation2;jsessionid=00000000.
+        app20126a?idb=1096493603&df_id=29151&29151.donation=form1&mfc_pref=T&NONCE_TOKEN=
+        E1E27C7CEA774F91EFB3502D75E335E5&s_channel=google&s_onsite_promo=MainNav_Donate&
+        s_subsrc=https://www.feedingamerica.org/about-us/press-room/feeding-america-
+        establishes-covid-19-response-fund-help-food-banks-during&s_src=W20BORGSC&29151_
+        donation=form1&s_referrer=google&_ga=2.209073106.119272393.1605933910-277661124.
+        1605933910" target="_blank">
         <img src="../Img/Feeding America.jpg" alt="" />
+        </a>
        <!-- <h3 id="covidText">Feeding America</h3>-->
        <a href="https://secure.feedingamerica.org/site/Donation2;jsessionid=00000000.
        app20126a?idb=1096493603&df_id=29151&29151.donation=form1&mfc_pref=T&NONCE_TOKEN=
@@ -110,7 +133,9 @@
       </div>
 
       <div>
-        <img src="../Img/nfl.jpeg" alt="" />
+        <a href="https://relief.nfl.com/" target="_blank">
+          <img src="../Img/nfl.jpeg" alt="" />
+        </a>
         <!-- <h3 id="covidText">Save The Children</h3> -->
         <a href="https://relief.nfl.com/" target="_blank">
           <h3>
@@ -127,7 +152,9 @@
       </div>
 
       <div>
-        <img src="../Img/foundationCarolina.png" alt="" />
+        <a href="https://app.mobilecause.com/vf/HELPCharMeck" target="_blank">
+          <img src="../Img/foundationCarolina.png" alt="" />
+        </a>
         <!-- <h3 id="covidText">Team Rubicon</h3> -->
         <a href="https://app.mobilecause.com/vf/HELPCharMeck" target="_blank">
           <h3>
