--- a/COVID_Fontend_files/front-end/donate.html
+++ b/COVID_Fontend_files/front-end/donate.html
@@ -180,7 +180,9 @@
       <div class="btns">
         <button type="button" onclick="changeMode(this)" id="modeButton" class="footerBtn">Dark Mode</button>
         <button type="button" id="accessibilityBtn" class="footerBtn">Accessibility</button>
-        <button type="button" id="legalBtn" class="footerBtn">Legal</button>
+        <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
+          Terms
+        </button>
       </div>
   </footer>
 
