--- a/COVID_Fontend_files/front-end/Index.html
+++ b/COVID_Fontend_files/front-end/Index.html
@@ -27,7 +27,7 @@
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
       <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
-      <li><a href="./news.html">Local News</a></li>
+      <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
   </nav>
@@ -52,7 +52,7 @@
       </div>
       <div>
         <img src="../Img/NEWS.jpg" alt="" />
-        <h3 id="covidText">Local News</h3>
+        <h3 id="covidText">News</h3>
         <p id="covidText">
           Some text
         </p>
@@ -61,7 +61,7 @@
         <img src="../Img/covid_up.jpg" alt="" />
         <h3 id="covidText">Chart</h3>
         <p>
-          <canvas id="myChart" width="100" height="100"></canvas>
+          <canvas id="myChart" width="150" height="200"></canvas>
         </p>
       </div>
     </section>
@@ -74,7 +74,9 @@
       <div class="btns">
         <button type="button" onclick="changeMode(this)" id="modeButton" class="footerBtn">Dark Mode</button>
         <button type="button" id="accessibilityBtn" class="footerBtn">Accessibility</button>
-        <button type="button" id="legalBtn" class="footerBtn">Legal</button>
+        <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
+          Terms
+        </button>
       </div>
   </footer>
 
