--- a/COVID_Fontend_files/front-end/news.html
+++ b/COVID_Fontend_files/front-end/news.html
@@ -27,7 +27,7 @@
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
       <li><a href="./CDC.html">CDC</a></li>
-      <li><a href="./news.html">Local News</a></li>
+      <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
   </nav>
@@ -69,12 +69,14 @@
 
   <footer class="foot">
 	  <div class="copyright">
-      <p><small>Copyright 2020, North Carolina Covid-19 Dashboard</p></small>
+      <p><small>Copyright 2020, North Carolina Covid-19 Dashboard</small></p>
     </div>
       <div class="btns">
         <button type="button" onclick="changeMode(this)" id="modeButton" class="footerBtn">Dark Mode</button>
         <button type="button" id="accessibilityBtn" class="footerBtn">Accessibility</button>
-        <button type="button" id="legalBtn" class="footerBtn">Legal</button>
+        <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
+          Terms
+        </button>
       </div>
   </footer>
 
