--- a/COVID_Fontend_files/front-end/news.html
+++ b/COVID_Fontend_files/front-end/news.html
@@ -26,7 +26,7 @@
   <nav class = "main-nav">
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
-      <li><a href="./CDC.html">CDC</a></li>
+      <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
       <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
