--- a/COVID_Fontend_files/front-end/donate.html
+++ b/COVID_Fontend_files/front-end/donate.html
@@ -29,6 +29,7 @@
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
       <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
+      <li><a href="./searchbyzipcode.html">Search By Zipcode</a></li>
       <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
@@ -179,7 +180,6 @@
     </div>
       <div class="btns">
         <button type="button" onclick="changeMode(this)" id="modeButton" class="footerBtn">Dark Mode</button>
-        <button type="button" id="accessibilityBtn" class="footerBtn">Accessibility</button>
         <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
           Terms
         </button>
