--- a/COVID_Fontend_files/front-end/legal.html
+++ b/COVID_Fontend_files/front-end/legal.html
@@ -22,11 +22,12 @@
 
   <div class="toplogo">
     <img src="../Img/logo.png" alt="website logo" class="logo">
-
+    <!--
     <form class="Zip" action="/action_page.php" style="margin:auto;max-width:300px">
-      <input type="text" placeholder="Search by Zipcode" name="search2">
+      <input type="text" placeholder="Search" name="search2">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+  -->
   </div>
 
   <nav class="main-nav">
@@ -35,7 +36,8 @@
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
       <li><a href="./CDC.html">CDC</a></li>
-      <li><a href="./LocalNews.html">Local News</a></li>
+      <li><a href="./searchbyzipcode.html">Search By Zipcode</a></li>
+      <li><a href="./LocalNews.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
   </nav>
@@ -229,7 +231,6 @@
       <p><small>Copyright 2020, North Carolina Covid-19 Dashboard</small></p>
     </div>
       <div class="btns">
-        <button type="button" id="accessibilityBtn" class="footerBtn" >Accessibility</button>
         <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
           Terms
         </button>
