--- a/COVID_Fontend_files/front-end/searchbyzipcode.html
+++ b/COVID_Fontend_files/front-end/searchbyzipcode.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <title>COVID-19 - CDC</title>
+  <title>COVID-19 - Search By Zipcode</title>
   <meta name="description" content= "The purpose of this Covid-19 dashboard is to help  NC
     community to stay up to date with latest numbers and news">
 </head>
@@ -17,52 +17,55 @@
   <a href="#main" class="skip-nav">Skip Navigation</a>
   <div class="toplogo" id="topHeader">
     <img src="../Img/logo.png" alt="website logo" class="logo">
+    <!--
     <form class="Zip" action="/action_page.php" style="margin:auto;max-width:300px">
-      <input type="text" placeholder="Search by Zipcode" name="search2">
+      <input type="text" placeholder="Search" name="search2">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+    -->
   </div>
 
   <nav class = "main-nav">
     <ul class="main-menu">
       <li><a href="./Index.html">Home</a></li>
-      <li><a href="./CDC.html">CDC</a></li>
+      <li><a href="https://www.cdc.gov/" target="_blank">CDC</a></li>
+      <li><a href="./searchbyzipcode.html">Search By Zipcode</a></li>
       <li><a href="./news.html">News</a></li>
       <li><a href="./donate.html">Donate</a></li>
     </ul>
   </nav>
   <!--place holder-->
   <div class="container">
-    <header class="map">
-      <h2>NC map</h2>
-      <p>
-        Current statistics
-      </p>
-      <a href="#" class="btn">NC COVID-19<i class="fas fa-chevron-right"></i></a>
-    </header>
+
 
     <!--Place holder-->
-    <section class="covid" id="covidInfoTab">
-      <div>
-        <img src="../Img/COVID-testing.jpg" alt="">
-        <h3 id="covidText">Testing locations (Covid-19)</h3>
-        <p>
-          Search for nearby Covid-19 testing sites using your zipcode within North Carolina.
-        </p>
-      </div>
-      <div>
-        <img src="../Img/NEWS.jpg" alt="" />
-        <h3 id="covidText">Local News</h3>
-        <p id="covidText">
-          Some text
-        </p>
-      </div>
-      <div>
-        <img src="../Img/covid_up.jpg" alt="" />
-        <h3 id="covidText">Chart</h3>
-        <p>
-          <canvas id="myChart" width="100" height="100"></canvas>
-        </p>
+    <section class="pagelength" id="covidInfoTab">
+
+      <div class="placeholderzip">
+        <h2>
+          Search for nearby Testing Sites, News and Covid-19 Statistics.
+        </h2>
+        <form class="searchbox" action="/action_page.php" style="margin:auto;max-width:300px">
+          <input type="text" placeholder="Enter Your Zipcode" name="search2">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+        <img src="../Img/doc.png" alt="doc avatar" class="docimage">
+        <div class="infoinsidebox">
+          <h4>Anyone with symptoms of COVID-19, such as fever, cough or shortness of breath, or anyone who
+            has <br> been exposed to someone with COVID-19 should self-isolate and talk to a health care
+            professional.
+          </h4>
+          <p>
+              1) If you are experiencing symptoms of COVID-19 contact your health care provider or telehealth
+              program to discuss whether you <br> should be evaluated for testing. <br>
+              2) Call the test site before you go to learn about testing criteria, availability, hours and
+              location. Not all health care providers provide <br> testing on-site. Some require an appointment
+              and/or referral from a health care provider. Locations are subject to change. <br>
+              3) Each COVID-19 test provider will determine if testing is appropriate based on your symptoms,
+              risk factors and test availability.
+          </p>
+        </div>
+        </div>
       </div>
     </section>
   </div>
@@ -73,7 +76,6 @@
     </div>
       <div class="btns">
         <button type="button" onclick="changeMode(this)" id="modeButton" class="footerBtn">Dark Mode</button>
-        <button type="button" id="accessibilityBtn" class="footerBtn">Accessibility</button>
         <button href="./legal.html" type="button" id="legalBtn" class="footerBtn" onclick="window.location.href='./legal.html'">
           Terms
         </button>
